--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "linktree-clone",
-  "version": "0.1.0",
+  "name": "realvjy",
+  "version": "5.0.0",
+  "description": "Design Wizard",
+  "author": "realvjy",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
+    "@react-three/fiber": "^8.2.1",
+    "next": "^12.2.4",
+    "next-seo": "^5.5.0",
+    "nextjs-google-analytics": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "react-fast-marquee": "^1.3.2",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-particles-js": "^3.6.0",
+    "styled-components": "^5.3.5",
+    "three": "^0.142.0",
+    "use-dark-mode": "^2.3.1",
+    "use-window-size": "^0.0.1"
+  },
+  "devDependencies": {
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.1"
   }
 }
